# SynthLang

./: .env.sample  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  deploy.sh  destroy-redeploy.sh  eslint.config.js  fly.toml  index.html  package-lock.json  package.json  tsconfig.json
cli/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py  test_cases.json
cli/data/: evaluation_criteria.json
cli/docs/: classification.md  development.md  evolution.md  mathematical_patterns.md  usage.md
cli/examples/: test_data.json  train_data.json
cli/math_applications/: algorithm_design.md  data_pipeline.md  practical_applications.md  software_architecture.md  system_integration.md
cli/math_prompts/: abstract_algebra_prompts.md  category_theory_prompts.md  complex_analysis_prompts.md  reflective_patterns.md  set_theory_prompts.md  topology_prompts.md
cli/scripts/: README.md  advanced_translation.sh  agentic_finetuning_pipeline.sh  agentic_reasoning_pipeline.sh  basic_translation.sh  classification_examples.sh  creative_examples.sh  domain_specific_examples.sh  enhanced_agentic_pipeline.sh  evaluation_framework.sh  evolution_examples.sh  math_pattern_applications.sh  mathematical_pattern_examples.sh  mathematical_reflective_prompts.sh  optimization_examples.sh  pipeline_example.sh  specialized_agentic_examples.sh
cli/specialized_examples/: architecture_planner.md  combined_report.md  data_science_pipeline.md  product_optimizer.md  research_assistant.md  security_analyzer.md
cli/synthlang/: __init__.py  cli.py  (+7 more)
(+165 files in other folders)
